# openclaw-kbprep

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  openclaw.plugin.json  package-lock.json  package.json  sitecustomize.py  tsconfig.json
.github/workflows/: ci.yml
docs/: .npmignore  agent-neutral.md  audit-remediation.md  capability-matrix.md  decoupling.md  feedback-learning.md  hardcoded-cleaning-inventory.md  index.html  kbprep-core-flow-design.md  kbprep-development-implementation-plan.md  kbprep-full-flowchart.html  kbprep-operator-workflows.md  kbprep-project-explained.html  kbprep-project-map-report.html  known-issues.md  quality-loop.md  repository-index.md  risk-tags.md  standalone-cli.md
docs/assets/: style.css
docs/install/: claude-code.md  codex.md  hermes.md  openclaw.md
kbprep_worker/: __init__.py
python/: pyproject.toml
python/kbprep_worker/: __init__.py  apply_patch.py  audit.py  blockify.py  classify_blocks.py  clean_rules.py  clean_rules_v4.py  cleanup.py  cli.py  convert.py  converter_capabilities.py  detect.py  diagnose.py  document_type.py  document_type_signals.py  envelope.py  epub.py  error_codes.py  fs_safety.py  images.py  mineru_adapter.py  normalize.py  notebook.py  obsidian_kb.py  obsidian_template.py  patch_guard.py  pdf_text.py  preflight.py  prepare.py  prepare_artifacts.py  prepare_batch.py  prepare_diagnosis.py  prepare_errors.py  prepare_publish.py  prepare_runtime.py  quality.py  render_outputs.py  repair_loop.py  rule_loader.py  rule_schema.py  (+8 more)
python/kbprep_worker/converters/: __init__.py  direct.py  html.py  office_xml.py
python/kbprep_worker/diagnose/: __init__.py  format_detect.py  pdf_analysis.py  runtime.py  text_quality.py
python/kbprep_worker/feedback/: __init__.py  artifacts.py  command.py  dictionary_suggestions.py  inputs.py  jsonl_store.py  patterns.py  promotion_history.py  proposals.py  rerun_verification.py  scope_inference.py
python/kbprep_worker/obsidian_kb/: __init__.py  body_notes.py  context.py  frontmatter.py  links.py  policy.py  signals.py  titles.py
python/kbprep_worker/quality/: __init__.py  cleanup_safety.py  conversion_integrity.py  gates.py  io.py  markdown_signals.py  retention.py  runner.py  thresholds.py
python/kbprep_worker/splitters/: __init__.py  base.py  generic_block.py  markdown_note.py  pdf_like.py
python/kbprep_worker/stages/: __init__.py  pipeline.py  pipeline_core.py
python/tests/: test_cleanup_guards.py  test_diagnose.py  test_diagnose_text_quality.py  test_direct_converter.py  test_envelope.py  test_error_code_contract.py  test_feedback.py  test_feedback_inputs.py  test_feedback_package_boundaries.py  test_fs_safety.py  test_html_converter.py  test_image_path_safety.py  test_knowledge_pollution_regression.py  test_normalize.py  test_office_xml_converter.py  test_quality_package_boundaries.py  test_quality_retention.py  test_review_regression_guards.py  test_source_pattern_scope.py  test_threshold_contract.py  test_typing_helpers.py
rules/base/: document_type_signals.json  obvious_noise.json  ocr_normalization.json  title_filters.json
scripts/: check-agent-neutral-runtime.mjs  check-audit-remediation.mjs  check-capability-matrix.mjs  check-cleaning-hardcodes.mjs  check-guidance-drift.mjs  check-pack.mjs  check-project-governance.mjs  check-protected-docs.mjs  check-thresholds.mjs  check-vault-smoke.mjs  release-check.mjs  serve-docs.mjs
src/: aiReview.test.ts  aiReview.ts  errorCodes.ts  errors.ts  index.test.ts  index.ts  test-structure.test.ts  worker.contract.test.ts  worker.test.ts  worker.ts
(+51 files in other folders)
