[project]
name = "kbprep-worker"
version = "0.5.1"
description = "KBPrep Python worker: prepare local raw files into clean Markdown"
requires-python = ">=3.10,<3.14"
dependencies = [
    "mineru[all]>=3.2.1,<4",
    "PyMuPDF>=1.27,<2",
    "beautifulsoup4==4.14.3",
    "lxml==6.0.2"
]

[project.optional-dependencies]
cuda = ["torch>=2.8,<3", "torchvision>=0.23,<1"]
dev = [
    "coverage[toml]>=7.6,<8",
    "mypy>=1.14,<2",
    "ruff>=0.8,<1"
]

[tool.coverage.run]
branch = true
source = ["kbprep_worker"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 30

[tool.ruff]
line-length = 140
target-version = "py310"

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82", "F401", "F841", "B904"]

[tool.mypy]
python_version = "3.10"
mypy_path = "python"
files = ["python/kbprep_worker"]
follow_imports = "silent"
show_error_codes = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["bs4", "fitz", "psutil", "torch"]
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
